# rwkv-agent

./: .gitignore  Cargo.toml
src/: main.rs
src/assets/: prompt.md
